// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[presentation] <Release /> renders correctly when productionType=compilation 1`] = `
<article
  class="Release"
>
  <header
    class="PageHeader"
  >
    <h1>
      title
    </h1>
  </header>
  <div
    class="MetaBar Release-meta"
  >
    <div
      class="Meta Release-type"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 14.5c-2.49 0-4.5-2.01-4.5-4.5S9.51 7.5 12 7.5s4.5 2.01 4.5 4.5-2.01 4.5-4.5 4.5zm0-5.5c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1z"
        />
      </svg>
       
      <span
        class="Meta-label"
      >
        <span>
          Type
        </span>
        :
      </span>
       
      <span
        class="Meta-value"
      >
        <span>
          Type
        </span>
      </span>
    </div>
    <div
      class="Meta Release-releasedOn"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M9 11H7v2h2v-2zm4 0h-2v2h2v-2zm4 0h-2v2h2v-2zm2-7h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V9h14v11z"
        />
      </svg>
       
      <span
        class="Meta-label"
      >
        <span>
          Released
        </span>
        :
      </span>
       
      <span
        class="Meta-value"
      >
        <time
          class="DateTime"
          datetime="2017-01-01T00:00:00"
          title="January 1, 2017"
        >
          January 1, 2017
        </time>
      </span>
    </div>
    <div
      class="Meta Release-length"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"
        />
      </svg>
       
      <span
        class="Meta-label"
      >
        <span>
          Length
        </span>
        :
      </span>
       
      <span
        class="Meta-value"
      >
        5:00
      </span>
    </div>
    <div
      class="Meta Release-genre"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12 3v10.55c-.59-.34-1.27-.55-2-.55-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4V7h4V3h-6z"
        />
      </svg>
       
      <span
        class="Meta-label"
      >
        <span>
          Genre
        </span>
        :
      </span>
       
      <span
        class="Meta-value"
      >
        genre
      </span>
    </div>
    <div
      class="Meta Release-tracks"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M2 17h2v.5H3v1h1v.5H2v1h3v-4H2v1zm1-9h1V4H2v1h1v3zm-1 3h1.8L2 13.1v.9h3v-1H3.2L5 10.9V10H2v1zm5-6v2h14V5H7zm0 14h14v-2H7v2zm0-6h14v-2H7v2z"
        />
      </svg>
        
      <span
        class="Meta-value"
      >
        1 
        <span>
          track
        </span>
      </span>
    </div>
  </div>
  <div
    class="Release-body"
  >
    <section
      class="Release-images"
    >
      <div
        class="Carousel"
      >
        <div
          class="Carousel-slides"
          style="transform:translate3d(-0%, 0, 0)"
        >
          <figure
            class="Image Release-image isLoading"
          >
            <div
              class="Image-wrapper"
            >
              <img
                alt="images 1 title"
                src="images 1 imageUrl"
              />
              <span
                class="Loader"
              >
                <div
                  class="Loader-animation"
                >
                  <span />
                  <span />
                  <span />
                </div>
              </span>
            </div>
            <figcaption>
              images 1 title
            </figcaption>
          </figure>
        </div>
      </div>
    </section>
    <div
      class="Release-details"
    >
      <section
        class="Release-description"
      >
        description
      </section>
      <section
        class="Release-tracklist"
      >
        <h2>
          <span>
            Tracklist
          </span>
        </h2>
        <ol>
          <li>
            <span
              class="Release-tracklist-title"
            >
              tracklist 1 title
            </span>
             
            <span
              class="Release-tracklist-genre"
            >
              tracklist 1 genre
            </span>
             
            <span
              class="Release-tracklist-length"
            >
              5:00
            </span>
          </li>
        </ol>
      </section>
      <section
        class="Release-copyright"
      >
        <p>
          ℗© 2017 recordLabel
        </p>
      </section>
    </div>
  </div>
</article>
`;

exports[`[presentation] <Release /> renders correctly when productionType=demo 1`] = `
<article
  class="Release"
>
  <header
    class="PageHeader"
  >
    <h1>
      title
    </h1>
  </header>
  <div
    class="MetaBar Release-meta"
  >
    <div
      class="Meta Release-type"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 14.5c-2.49 0-4.5-2.01-4.5-4.5S9.51 7.5 12 7.5s4.5 2.01 4.5 4.5-2.01 4.5-4.5 4.5zm0-5.5c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1z"
        />
      </svg>
       
      <span
        class="Meta-label"
      >
        <span>
          Type
        </span>
        :
      </span>
       
      <span
        class="Meta-value"
      >
        <span>
          Type
        </span>
      </span>
    </div>
    <div
      class="Meta Release-releasedOn"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M9 11H7v2h2v-2zm4 0h-2v2h2v-2zm4 0h-2v2h2v-2zm2-7h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V9h14v11z"
        />
      </svg>
       
      <span
        class="Meta-label"
      >
        <span>
          Released
        </span>
        :
      </span>
       
      <span
        class="Meta-value"
      >
        <time
          class="DateTime"
          datetime="2017-01-01T00:00:00"
          title="January 1, 2017"
        >
          January 1, 2017
        </time>
      </span>
    </div>
    <div
      class="Meta Release-length"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"
        />
      </svg>
       
      <span
        class="Meta-label"
      >
        <span>
          Length
        </span>
        :
      </span>
       
      <span
        class="Meta-value"
      >
        5:00
      </span>
    </div>
    <div
      class="Meta Release-genre"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12 3v10.55c-.59-.34-1.27-.55-2-.55-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4V7h4V3h-6z"
        />
      </svg>
       
      <span
        class="Meta-label"
      >
        <span>
          Genre
        </span>
        :
      </span>
       
      <span
        class="Meta-value"
      >
        genre
      </span>
    </div>
    <div
      class="Meta Release-tracks"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M2 17h2v.5H3v1h1v.5H2v1h3v-4H2v1zm1-9h1V4H2v1h1v3zm-1 3h1.8L2 13.1v.9h3v-1H3.2L5 10.9V10H2v1zm5-6v2h14V5H7zm0 14h14v-2H7v2zm0-6h14v-2H7v2z"
        />
      </svg>
        
      <span
        class="Meta-value"
      >
        1 
        <span>
          track
        </span>
      </span>
    </div>
  </div>
  <div
    class="Release-body"
  >
    <section
      class="Release-images"
    >
      <div
        class="Carousel"
      >
        <div
          class="Carousel-slides"
          style="transform:translate3d(-0%, 0, 0)"
        >
          <figure
            class="Image Release-image isLoading"
          >
            <div
              class="Image-wrapper"
            >
              <img
                alt="images 1 title"
                src="images 1 imageUrl"
              />
              <span
                class="Loader"
              >
                <div
                  class="Loader-animation"
                >
                  <span />
                  <span />
                  <span />
                </div>
              </span>
            </div>
            <figcaption>
              images 1 title
            </figcaption>
          </figure>
        </div>
      </div>
    </section>
    <div
      class="Release-details"
    >
      <section
        class="Release-description"
      >
        description
      </section>
      <section
        class="Release-tracklist"
      >
        <h2>
          <span>
            Tracklist
          </span>
        </h2>
        <ol>
          <li>
            <span
              class="Release-tracklist-title"
            >
              tracklist 1 title
            </span>
             
            <span
              class="Release-tracklist-genre"
            >
              tracklist 1 genre
            </span>
             
            <span
              class="Release-tracklist-length"
            >
              5:00
            </span>
          </li>
        </ol>
      </section>
      <section
        class="Release-copyright"
      >
        <p>
          ℗© 2017 recordLabel
        </p>
      </section>
    </div>
  </div>
</article>
`;

exports[`[presentation] <Release /> renders correctly when productionType=live 1`] = `
<article
  class="Release"
>
  <header
    class="PageHeader"
  >
    <h1>
      title
    </h1>
  </header>
  <div
    class="MetaBar Release-meta"
  >
    <div
      class="Meta Release-type"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 14.5c-2.49 0-4.5-2.01-4.5-4.5S9.51 7.5 12 7.5s4.5 2.01 4.5 4.5-2.01 4.5-4.5 4.5zm0-5.5c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1z"
        />
      </svg>
       
      <span
        class="Meta-label"
      >
        <span>
          Type
        </span>
        :
      </span>
       
      <span
        class="Meta-value"
      >
        <span>
          Type
        </span>
      </span>
    </div>
    <div
      class="Meta Release-releasedOn"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M9 11H7v2h2v-2zm4 0h-2v2h2v-2zm4 0h-2v2h2v-2zm2-7h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V9h14v11z"
        />
      </svg>
       
      <span
        class="Meta-label"
      >
        <span>
          Released
        </span>
        :
      </span>
       
      <span
        class="Meta-value"
      >
        <time
          class="DateTime"
          datetime="2017-01-01T00:00:00"
          title="January 1, 2017"
        >
          January 1, 2017
        </time>
      </span>
    </div>
    <div
      class="Meta Release-length"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"
        />
      </svg>
       
      <span
        class="Meta-label"
      >
        <span>
          Length
        </span>
        :
      </span>
       
      <span
        class="Meta-value"
      >
        5:00
      </span>
    </div>
    <div
      class="Meta Release-genre"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12 3v10.55c-.59-.34-1.27-.55-2-.55-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4V7h4V3h-6z"
        />
      </svg>
       
      <span
        class="Meta-label"
      >
        <span>
          Genre
        </span>
        :
      </span>
       
      <span
        class="Meta-value"
      >
        genre
      </span>
    </div>
    <div
      class="Meta Release-tracks"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M2 17h2v.5H3v1h1v.5H2v1h3v-4H2v1zm1-9h1V4H2v1h1v3zm-1 3h1.8L2 13.1v.9h3v-1H3.2L5 10.9V10H2v1zm5-6v2h14V5H7zm0 14h14v-2H7v2zm0-6h14v-2H7v2z"
        />
      </svg>
        
      <span
        class="Meta-value"
      >
        1 
        <span>
          track
        </span>
      </span>
    </div>
  </div>
  <div
    class="Release-body"
  >
    <section
      class="Release-images"
    >
      <div
        class="Carousel"
      >
        <div
          class="Carousel-slides"
          style="transform:translate3d(-0%, 0, 0)"
        >
          <figure
            class="Image Release-image isLoading"
          >
            <div
              class="Image-wrapper"
            >
              <img
                alt="images 1 title"
                src="images 1 imageUrl"
              />
              <span
                class="Loader"
              >
                <div
                  class="Loader-animation"
                >
                  <span />
                  <span />
                  <span />
                </div>
              </span>
            </div>
            <figcaption>
              images 1 title
            </figcaption>
          </figure>
        </div>
      </div>
    </section>
    <div
      class="Release-details"
    >
      <section
        class="Release-description"
      >
        description
      </section>
      <section
        class="Release-tracklist"
      >
        <h2>
          <span>
            Tracklist
          </span>
        </h2>
        <ol>
          <li>
            <span
              class="Release-tracklist-title"
            >
              tracklist 1 title
            </span>
             
            <span
              class="Release-tracklist-genre"
            >
              tracklist 1 genre
            </span>
             
            <span
              class="Release-tracklist-length"
            >
              5:00
            </span>
          </li>
        </ol>
      </section>
      <section
        class="Release-copyright"
      >
        <p>
          ℗© 2017 recordLabel
        </p>
      </section>
    </div>
  </div>
</article>
`;

exports[`[presentation] <Release /> renders correctly when productionType=remix 1`] = `
<article
  class="Release"
>
  <header
    class="PageHeader"
  >
    <h1>
      title
    </h1>
  </header>
  <div
    class="MetaBar Release-meta"
  >
    <div
      class="Meta Release-type"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 14.5c-2.49 0-4.5-2.01-4.5-4.5S9.51 7.5 12 7.5s4.5 2.01 4.5 4.5-2.01 4.5-4.5 4.5zm0-5.5c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1z"
        />
      </svg>
       
      <span
        class="Meta-label"
      >
        <span>
          Type
        </span>
        :
      </span>
       
      <span
        class="Meta-value"
      >
        <span>
          Type
        </span>
      </span>
    </div>
    <div
      class="Meta Release-releasedOn"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M9 11H7v2h2v-2zm4 0h-2v2h2v-2zm4 0h-2v2h2v-2zm2-7h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V9h14v11z"
        />
      </svg>
       
      <span
        class="Meta-label"
      >
        <span>
          Released
        </span>
        :
      </span>
       
      <span
        class="Meta-value"
      >
        <time
          class="DateTime"
          datetime="2017-01-01T00:00:00"
          title="January 1, 2017"
        >
          January 1, 2017
        </time>
      </span>
    </div>
    <div
      class="Meta Release-length"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"
        />
      </svg>
       
      <span
        class="Meta-label"
      >
        <span>
          Length
        </span>
        :
      </span>
       
      <span
        class="Meta-value"
      >
        5:00
      </span>
    </div>
    <div
      class="Meta Release-genre"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12 3v10.55c-.59-.34-1.27-.55-2-.55-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4V7h4V3h-6z"
        />
      </svg>
       
      <span
        class="Meta-label"
      >
        <span>
          Genre
        </span>
        :
      </span>
       
      <span
        class="Meta-value"
      >
        genre
      </span>
    </div>
    <div
      class="Meta Release-tracks"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M2 17h2v.5H3v1h1v.5H2v1h3v-4H2v1zm1-9h1V4H2v1h1v3zm-1 3h1.8L2 13.1v.9h3v-1H3.2L5 10.9V10H2v1zm5-6v2h14V5H7zm0 14h14v-2H7v2zm0-6h14v-2H7v2z"
        />
      </svg>
        
      <span
        class="Meta-value"
      >
        1 
        <span>
          track
        </span>
      </span>
    </div>
  </div>
  <div
    class="Release-body"
  >
    <section
      class="Release-images"
    >
      <div
        class="Carousel"
      >
        <div
          class="Carousel-slides"
          style="transform:translate3d(-0%, 0, 0)"
        >
          <figure
            class="Image Release-image isLoading"
          >
            <div
              class="Image-wrapper"
            >
              <img
                alt="images 1 title"
                src="images 1 imageUrl"
              />
              <span
                class="Loader"
              >
                <div
                  class="Loader-animation"
                >
                  <span />
                  <span />
                  <span />
                </div>
              </span>
            </div>
            <figcaption>
              images 1 title
            </figcaption>
          </figure>
        </div>
      </div>
    </section>
    <div
      class="Release-details"
    >
      <section
        class="Release-description"
      >
        description
      </section>
      <section
        class="Release-tracklist"
      >
        <h2>
          <span>
            Tracklist
          </span>
        </h2>
        <ol>
          <li>
            <span
              class="Release-tracklist-title"
            >
              tracklist 1 title
            </span>
             
            <span
              class="Release-tracklist-genre"
            >
              tracklist 1 genre
            </span>
             
            <span
              class="Release-tracklist-length"
            >
              5:00
            </span>
          </li>
        </ol>
      </section>
      <section
        class="Release-copyright"
      >
        <p>
          ℗© 2017 recordLabel
        </p>
      </section>
    </div>
  </div>
</article>
`;

exports[`[presentation] <Release /> renders correctly when productionType=soundtrack 1`] = `
<article
  class="Release"
>
  <header
    class="PageHeader"
  >
    <h1>
      title
    </h1>
  </header>
  <div
    class="MetaBar Release-meta"
  >
    <div
      class="Meta Release-type"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 14.5c-2.49 0-4.5-2.01-4.5-4.5S9.51 7.5 12 7.5s4.5 2.01 4.5 4.5-2.01 4.5-4.5 4.5zm0-5.5c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1z"
        />
      </svg>
       
      <span
        class="Meta-label"
      >
        <span>
          Type
        </span>
        :
      </span>
       
      <span
        class="Meta-value"
      >
        <span>
          Type
        </span>
      </span>
    </div>
    <div
      class="Meta Release-releasedOn"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M9 11H7v2h2v-2zm4 0h-2v2h2v-2zm4 0h-2v2h2v-2zm2-7h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V9h14v11z"
        />
      </svg>
       
      <span
        class="Meta-label"
      >
        <span>
          Released
        </span>
        :
      </span>
       
      <span
        class="Meta-value"
      >
        <time
          class="DateTime"
          datetime="2017-01-01T00:00:00"
          title="January 1, 2017"
        >
          January 1, 2017
        </time>
      </span>
    </div>
    <div
      class="Meta Release-length"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"
        />
      </svg>
       
      <span
        class="Meta-label"
      >
        <span>
          Length
        </span>
        :
      </span>
       
      <span
        class="Meta-value"
      >
        5:00
      </span>
    </div>
    <div
      class="Meta Release-genre"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12 3v10.55c-.59-.34-1.27-.55-2-.55-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4V7h4V3h-6z"
        />
      </svg>
       
      <span
        class="Meta-label"
      >
        <span>
          Genre
        </span>
        :
      </span>
       
      <span
        class="Meta-value"
      >
        genre
      </span>
    </div>
    <div
      class="Meta Release-tracks"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M2 17h2v.5H3v1h1v.5H2v1h3v-4H2v1zm1-9h1V4H2v1h1v3zm-1 3h1.8L2 13.1v.9h3v-1H3.2L5 10.9V10H2v1zm5-6v2h14V5H7zm0 14h14v-2H7v2zm0-6h14v-2H7v2z"
        />
      </svg>
        
      <span
        class="Meta-value"
      >
        1 
        <span>
          track
        </span>
      </span>
    </div>
  </div>
  <div
    class="Release-body"
  >
    <section
      class="Release-images"
    >
      <div
        class="Carousel"
      >
        <div
          class="Carousel-slides"
          style="transform:translate3d(-0%, 0, 0)"
        >
          <figure
            class="Image Release-image isLoading"
          >
            <div
              class="Image-wrapper"
            >
              <img
                alt="images 1 title"
                src="images 1 imageUrl"
              />
              <span
                class="Loader"
              >
                <div
                  class="Loader-animation"
                >
                  <span />
                  <span />
                  <span />
                </div>
              </span>
            </div>
            <figcaption>
              images 1 title
            </figcaption>
          </figure>
        </div>
      </div>
    </section>
    <div
      class="Release-details"
    >
      <section
        class="Release-description"
      >
        description
      </section>
      <section
        class="Release-tracklist"
      >
        <h2>
          <span>
            Tracklist
          </span>
        </h2>
        <ol>
          <li>
            <span
              class="Release-tracklist-title"
            >
              tracklist 1 title
            </span>
             
            <span
              class="Release-tracklist-genre"
            >
              tracklist 1 genre
            </span>
             
            <span
              class="Release-tracklist-length"
            >
              5:00
            </span>
          </li>
        </ol>
      </section>
      <section
        class="Release-copyright"
      >
        <p>
          ℗© 2017 recordLabel
        </p>
      </section>
    </div>
  </div>
</article>
`;

exports[`[presentation] <Release /> renders correctly when type=ep 1`] = `
<article
  class="Release"
>
  <header
    class="PageHeader"
  >
    <h1>
      title
    </h1>
  </header>
  <div
    class="MetaBar Release-meta"
  >
    <div
      class="Meta Release-type"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 14.5c-2.49 0-4.5-2.01-4.5-4.5S9.51 7.5 12 7.5s4.5 2.01 4.5 4.5-2.01 4.5-4.5 4.5zm0-5.5c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1z"
        />
      </svg>
       
      <span
        class="Meta-label"
      >
        <span>
          Type
        </span>
        :
      </span>
       
      <span
        class="Meta-value"
      >
        <span>
          EP
        </span>
      </span>
    </div>
    <div
      class="Meta Release-releasedOn"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M9 11H7v2h2v-2zm4 0h-2v2h2v-2zm4 0h-2v2h2v-2zm2-7h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V9h14v11z"
        />
      </svg>
       
      <span
        class="Meta-label"
      >
        <span>
          Released
        </span>
        :
      </span>
       
      <span
        class="Meta-value"
      >
        <time
          class="DateTime"
          datetime="2017-01-01T00:00:00"
          title="January 1, 2017"
        >
          January 1, 2017
        </time>
      </span>
    </div>
    <div
      class="Meta Release-length"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"
        />
      </svg>
       
      <span
        class="Meta-label"
      >
        <span>
          Length
        </span>
        :
      </span>
       
      <span
        class="Meta-value"
      >
        5:00
      </span>
    </div>
    <div
      class="Meta Release-genre"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12 3v10.55c-.59-.34-1.27-.55-2-.55-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4V7h4V3h-6z"
        />
      </svg>
       
      <span
        class="Meta-label"
      >
        <span>
          Genre
        </span>
        :
      </span>
       
      <span
        class="Meta-value"
      >
        genre
      </span>
    </div>
    <div
      class="Meta Release-tracks"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M2 17h2v.5H3v1h1v.5H2v1h3v-4H2v1zm1-9h1V4H2v1h1v3zm-1 3h1.8L2 13.1v.9h3v-1H3.2L5 10.9V10H2v1zm5-6v2h14V5H7zm0 14h14v-2H7v2zm0-6h14v-2H7v2z"
        />
      </svg>
        
      <span
        class="Meta-value"
      >
        1 
        <span>
          track
        </span>
      </span>
    </div>
  </div>
  <div
    class="Release-body"
  >
    <section
      class="Release-images"
    >
      <div
        class="Carousel"
      >
        <div
          class="Carousel-slides"
          style="transform:translate3d(-0%, 0, 0)"
        >
          <figure
            class="Image Release-image isLoading"
          >
            <div
              class="Image-wrapper"
            >
              <img
                alt="images 1 title"
                src="images 1 imageUrl"
              />
              <span
                class="Loader"
              >
                <div
                  class="Loader-animation"
                >
                  <span />
                  <span />
                  <span />
                </div>
              </span>
            </div>
            <figcaption>
              images 1 title
            </figcaption>
          </figure>
        </div>
      </div>
    </section>
    <div
      class="Release-details"
    >
      <section
        class="Release-description"
      >
        description
      </section>
      <section
        class="Release-tracklist"
      >
        <h2>
          <span>
            Tracklist
          </span>
        </h2>
        <ol>
          <li>
            <span
              class="Release-tracklist-title"
            >
              tracklist 1 title
            </span>
             
            <span
              class="Release-tracklist-genre"
            >
              tracklist 1 genre
            </span>
             
            <span
              class="Release-tracklist-length"
            >
              5:00
            </span>
          </li>
        </ol>
      </section>
      <section
        class="Release-copyright"
      >
        <p>
          ℗© 2017 recordLabel
        </p>
      </section>
    </div>
  </div>
</article>
`;

exports[`[presentation] <Release /> renders correctly when type=single 1`] = `
<article
  class="Release"
>
  <header
    class="PageHeader"
  >
    <h1>
      title
    </h1>
  </header>
  <div
    class="MetaBar Release-meta"
  >
    <div
      class="Meta Release-type"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 14.5c-2.49 0-4.5-2.01-4.5-4.5S9.51 7.5 12 7.5s4.5 2.01 4.5 4.5-2.01 4.5-4.5 4.5zm0-5.5c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1z"
        />
      </svg>
       
      <span
        class="Meta-label"
      >
        <span>
          Type
        </span>
        :
      </span>
       
      <span
        class="Meta-value"
      >
        <span>
          Single
        </span>
      </span>
    </div>
    <div
      class="Meta Release-releasedOn"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M9 11H7v2h2v-2zm4 0h-2v2h2v-2zm4 0h-2v2h2v-2zm2-7h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V9h14v11z"
        />
      </svg>
       
      <span
        class="Meta-label"
      >
        <span>
          Released
        </span>
        :
      </span>
       
      <span
        class="Meta-value"
      >
        <time
          class="DateTime"
          datetime="2017-01-01T00:00:00"
          title="January 1, 2017"
        >
          January 1, 2017
        </time>
      </span>
    </div>
    <div
      class="Meta Release-length"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"
        />
      </svg>
       
      <span
        class="Meta-label"
      >
        <span>
          Length
        </span>
        :
      </span>
       
      <span
        class="Meta-value"
      >
        5:00
      </span>
    </div>
    <div
      class="Meta Release-genre"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12 3v10.55c-.59-.34-1.27-.55-2-.55-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4V7h4V3h-6z"
        />
      </svg>
       
      <span
        class="Meta-label"
      >
        <span>
          Genre
        </span>
        :
      </span>
       
      <span
        class="Meta-value"
      >
        genre
      </span>
    </div>
    <div
      class="Meta Release-tracks"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M2 17h2v.5H3v1h1v.5H2v1h3v-4H2v1zm1-9h1V4H2v1h1v3zm-1 3h1.8L2 13.1v.9h3v-1H3.2L5 10.9V10H2v1zm5-6v2h14V5H7zm0 14h14v-2H7v2zm0-6h14v-2H7v2z"
        />
      </svg>
        
      <span
        class="Meta-value"
      >
        1 
        <span>
          track
        </span>
      </span>
    </div>
  </div>
  <div
    class="Release-body"
  >
    <section
      class="Release-images"
    >
      <div
        class="Carousel"
      >
        <div
          class="Carousel-slides"
          style="transform:translate3d(-0%, 0, 0)"
        >
          <figure
            class="Image Release-image isLoading"
          >
            <div
              class="Image-wrapper"
            >
              <img
                alt="images 1 title"
                src="images 1 imageUrl"
              />
              <span
                class="Loader"
              >
                <div
                  class="Loader-animation"
                >
                  <span />
                  <span />
                  <span />
                </div>
              </span>
            </div>
            <figcaption>
              images 1 title
            </figcaption>
          </figure>
        </div>
      </div>
    </section>
    <div
      class="Release-details"
    >
      <section
        class="Release-description"
      >
        description
      </section>
      <section
        class="Release-tracklist"
      >
        <h2>
          <span>
            Tracklist
          </span>
        </h2>
        <ol>
          <li>
            <span
              class="Release-tracklist-title"
            >
              tracklist 1 title
            </span>
             
            <span
              class="Release-tracklist-genre"
            >
              tracklist 1 genre
            </span>
             
            <span
              class="Release-tracklist-length"
            >
              5:00
            </span>
          </li>
        </ol>
      </section>
      <section
        class="Release-copyright"
      >
        <p>
          ℗© 2017 recordLabel
        </p>
      </section>
    </div>
  </div>
</article>
`;

exports[`[presentation] <Release /> renders correctly with all props 1`] = `
<article
  class="Release"
>
  <header
    class="PageHeader"
  >
    <h1>
      title
    </h1>
  </header>
  <div
    class="MetaBar Release-meta"
  >
    <div
      class="Meta Release-type"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 14.5c-2.49 0-4.5-2.01-4.5-4.5S9.51 7.5 12 7.5s4.5 2.01 4.5 4.5-2.01 4.5-4.5 4.5zm0-5.5c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1z"
        />
      </svg>
       
      <span
        class="Meta-label"
      >
        <span>
          Type
        </span>
        :
      </span>
       
      <span
        class="Meta-value"
      >
        <span>
          Type
        </span>
      </span>
    </div>
    <div
      class="Meta Release-releasedOn"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M9 11H7v2h2v-2zm4 0h-2v2h2v-2zm4 0h-2v2h2v-2zm2-7h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V9h14v11z"
        />
      </svg>
       
      <span
        class="Meta-label"
      >
        <span>
          Released
        </span>
        :
      </span>
       
      <span
        class="Meta-value"
      >
        <time
          class="DateTime"
          datetime="2017-01-01T00:00:00"
          title="January 1, 2017"
        >
          January 1, 2017
        </time>
      </span>
    </div>
    <div
      class="Meta Release-length"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"
        />
      </svg>
       
      <span
        class="Meta-label"
      >
        <span>
          Length
        </span>
        :
      </span>
       
      <span
        class="Meta-value"
      >
        5:00
      </span>
    </div>
    <div
      class="Meta Release-genre"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12 3v10.55c-.59-.34-1.27-.55-2-.55-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4V7h4V3h-6z"
        />
      </svg>
       
      <span
        class="Meta-label"
      >
        <span>
          Genre
        </span>
        :
      </span>
       
      <span
        class="Meta-value"
      >
        genre
      </span>
    </div>
    <div
      class="Meta Release-tracks"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M2 17h2v.5H3v1h1v.5H2v1h3v-4H2v1zm1-9h1V4H2v1h1v3zm-1 3h1.8L2 13.1v.9h3v-1H3.2L5 10.9V10H2v1zm5-6v2h14V5H7zm0 14h14v-2H7v2zm0-6h14v-2H7v2z"
        />
      </svg>
        
      <span
        class="Meta-value"
      >
        4 
        <span>
          tracks
        </span>
      </span>
    </div>
  </div>
  <div
    class="Release-body"
  >
    <section
      class="Release-images"
    >
      <div
        class="Carousel"
      >
        <div
          class="Carousel-slides"
          style="transform:translate3d(-0%, 0, 0)"
        >
          <figure
            class="Image Release-image isLoading"
          >
            <div
              class="Image-wrapper"
            >
              <img
                alt="images 1 title"
                src="images 1 imageUrl"
              />
              <span
                class="Loader"
              >
                <div
                  class="Loader-animation"
                >
                  <span />
                  <span />
                  <span />
                </div>
              </span>
            </div>
            <figcaption>
              images 1 title
            </figcaption>
          </figure>
          <figure
            class="Image Release-image isLoading"
          >
            <div
              class="Image-wrapper"
            >
              <img
                alt="images 2 title"
                src="images 2 imageUrl"
              />
              <span
                class="Loader"
              >
                <div
                  class="Loader-animation"
                >
                  <span />
                  <span />
                  <span />
                </div>
              </span>
            </div>
            <figcaption>
              images 2 title
            </figcaption>
          </figure>
        </div>
        <div
          class="Carousel-pagination"
        >
          <button
            class="Carousel-page isSelected"
          >
            <span>
              1
            </span>
          </button>
          <button
            class="Carousel-page"
          >
            <span>
              2
            </span>
          </button>
        </div>
      </div>
    </section>
    <div
      class="Release-details"
    >
      <section
        class="Release-description"
      >
        description
      </section>
      <section
        class="Release-tracklist"
      >
        <h2>
          <span>
            Tracklist
          </span>
        </h2>
        <h3>
          <span>
            Disc 0
          </span>
        </h3>
        <ol>
          <li>
            <span
              class="Release-tracklist-title"
            >
              tracklist 1.1 title
            </span>
             
            <span
              class="Release-tracklist-genre"
            >
              tracklist 1.1 genre
            </span>
             
            <span
              class="Release-tracklist-length"
            >
              5:00
            </span>
          </li>
          <li>
            <span
              class="Release-tracklist-title"
            >
              tracklist 1.2 title
            </span>
             
            <span
              class="Release-tracklist-genre"
            >
              tracklist 1.2 genre
            </span>
             
            <span
              class="Release-tracklist-length"
            >
              5:00
            </span>
          </li>
        </ol>
        <h3>
          <span>
            Disc 1
          </span>
        </h3>
        <ol>
          <li>
            <span
              class="Release-tracklist-title"
            >
              tracklist 2.1 title
            </span>
             
            <span
              class="Release-tracklist-genre"
            >
              tracklist 2.1 genre
            </span>
             
            <span
              class="Release-tracklist-length"
            >
              5:00
            </span>
          </li>
          <li>
            <span
              class="Release-tracklist-title"
            >
              tracklist 2.2 title
            </span>
             
            <span
              class="Release-tracklist-genre"
            >
              tracklist 2.2 genre
            </span>
             
            <span
              class="Release-tracklist-length"
            >
              5:00
            </span>
          </li>
        </ol>
      </section>
      <section
        class="Release-streamList"
      >
        <h2>
          <span>
            Stream
          </span>
        </h2>
        <ul
          class="Release-platformList"
        >
          <li>
            <a
              href="streamList 1 url"
              rel="noopener"
              target="_blank"
              title="Stream 'title' on Spotify"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 496 512"
                width="1em"
              >
                <path
                  d="M248 8C111.1 8 0 119.1 0 256s111.1 248 248 248 248-111.1 248-248S384.9 8 248 8zm100.7 364.9c-4.2 0-6.8-1.3-10.7-3.6-62.4-37.6-135-39.2-206.7-24.5-3.9 1-9 2.6-11.9 2.6-9.7 0-15.8-7.7-15.8-15.8 0-10.3 6.1-15.2 13.6-16.8 81.9-18.1 165.6-16.5 237 26.2 6.1 3.9 9.7 7.4 9.7 16.5s-7.1 15.4-15.2 15.4zm26.9-65.6c-5.2 0-8.7-2.3-12.3-4.2-62.5-37-155.7-51.9-238.6-29.4-4.8 1.3-7.4 2.6-11.9 2.6-10.7 0-19.4-8.7-19.4-19.4s5.2-17.8 15.5-20.7c27.8-7.8 56.2-13.6 97.8-13.6 64.9 0 127.6 16.1 177 45.5 8.1 4.8 11.3 11 11.3 19.7-.1 10.8-8.5 19.5-19.4 19.5zm31-76.2c-5.2 0-8.4-1.3-12.9-3.9-71.2-42.5-198.5-52.7-280.9-29.7-3.6 1-8.1 2.6-12.9 2.6-13.2 0-23.3-10.3-23.3-23.6 0-13.6 8.4-21.3 17.4-23.9 35.2-10.3 74.6-15.2 117.5-15.2 73 0 149.5 15.2 205.4 47.8 7.8 4.5 12.9 10.7 12.9 22.6 0 13.6-11 23.3-23.2 23.3z"
                />
              </svg>
               
              <span>
                Spotify
              </span>
            </a>
          </li>
        </ul>
      </section>
      <section
        class="Release-buyList"
      >
        <h2>
          <span>
            Buy
          </span>
        </h2>
        <ul
          class="Release-platformList"
        >
          <li>
            <a
              href="buyList 1 url"
              rel="noopener"
              target="_blank"
              title="Buy 'title' from iTunes"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 376.5 512"
                width="1em"
              >
                <path
                  d="M314.7 268.7c-.2-36.7 16.4-64.4 50-84.8-18.8-26.9-47.2-41.7-84.7-44.6-35.5-2.8-74.3 20.7-88.5 20.7-15 0-49.4-19.7-76.4-19.7C59.3 141.2 0 184.8 0 273.5c0 26.2 4.8 53.3 14.4 81.2 12.8 36.7 59 126.7 107.2 125.2 25.2-.6 43-17.9 75.8-17.9 31.8 0 48.3 17.9 76.4 17.9 48.6-.7 90.4-82.5 102.6-119.3-65.2-30.7-61.7-90-61.7-91.9zm-56.6-164.2c27.3-32.4 24.8-61.9 24-72.5-24.1 1.4-52 16.4-67.9 34.9-17.5 19.8-27.8 44.3-25.6 71.9 26.1 2 49.9-11.4 69.5-34.3z"
                />
              </svg>
               
              <span>
                iTunes
              </span>
            </a>
          </li>
        </ul>
      </section>
      <section
        class="Release-copyright"
      >
        <p>
          ℗© 2017 recordLabel
        </p>
      </section>
    </div>
  </div>
</article>
`;

exports[`[presentation] <Release /> renders correctly with minimum props 1`] = `
<article
  class="Release"
>
  <header
    class="PageHeader"
  >
    <h1>
      title
    </h1>
  </header>
  <div
    class="MetaBar Release-meta"
  >
    <div
      class="Meta Release-type"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 14.5c-2.49 0-4.5-2.01-4.5-4.5S9.51 7.5 12 7.5s4.5 2.01 4.5 4.5-2.01 4.5-4.5 4.5zm0-5.5c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1z"
        />
      </svg>
       
      <span
        class="Meta-label"
      >
        <span>
          Type
        </span>
        :
      </span>
       
      <span
        class="Meta-value"
      >
        <span>
          Type
        </span>
      </span>
    </div>
    <div
      class="Meta Release-releasedOn"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M9 11H7v2h2v-2zm4 0h-2v2h2v-2zm4 0h-2v2h2v-2zm2-7h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V9h14v11z"
        />
      </svg>
       
      <span
        class="Meta-label"
      >
        <span>
          Released
        </span>
        :
      </span>
       
      <span
        class="Meta-value"
      >
        <time
          class="DateTime"
          datetime="2017-01-01T00:00:00"
          title="January 1, 2017"
        >
          January 1, 2017
        </time>
      </span>
    </div>
    <div
      class="Meta Release-length"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"
        />
      </svg>
       
      <span
        class="Meta-label"
      >
        <span>
          Length
        </span>
        :
      </span>
       
      <span
        class="Meta-value"
      >
        5:00
      </span>
    </div>
    <div
      class="Meta Release-genre"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12 3v10.55c-.59-.34-1.27-.55-2-.55-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4V7h4V3h-6z"
        />
      </svg>
       
      <span
        class="Meta-label"
      >
        <span>
          Genre
        </span>
        :
      </span>
       
      <span
        class="Meta-value"
      >
        genre
      </span>
    </div>
    <div
      class="Meta Release-tracks"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M2 17h2v.5H3v1h1v.5H2v1h3v-4H2v1zm1-9h1V4H2v1h1v3zm-1 3h1.8L2 13.1v.9h3v-1H3.2L5 10.9V10H2v1zm5-6v2h14V5H7zm0 14h14v-2H7v2zm0-6h14v-2H7v2z"
        />
      </svg>
        
      <span
        class="Meta-value"
      >
        1 
        <span>
          track
        </span>
      </span>
    </div>
  </div>
  <div
    class="Release-body"
  >
    <section
      class="Release-images"
    >
      <div
        class="Carousel"
      >
        <div
          class="Carousel-slides"
          style="transform:translate3d(-0%, 0, 0)"
        >
          <figure
            class="Image Release-image isLoading"
          >
            <div
              class="Image-wrapper"
            >
              <img
                alt="images 1 title"
                src="images 1 imageUrl"
              />
              <span
                class="Loader"
              >
                <div
                  class="Loader-animation"
                >
                  <span />
                  <span />
                  <span />
                </div>
              </span>
            </div>
            <figcaption>
              images 1 title
            </figcaption>
          </figure>
        </div>
      </div>
    </section>
    <div
      class="Release-details"
    >
      <section
        class="Release-description"
      >
        description
      </section>
      <section
        class="Release-tracklist"
      >
        <h2>
          <span>
            Tracklist
          </span>
        </h2>
        <ol>
          <li>
            <span
              class="Release-tracklist-title"
            >
              tracklist 1 title
            </span>
             
            <span
              class="Release-tracklist-genre"
            >
              tracklist 1 genre
            </span>
             
            <span
              class="Release-tracklist-length"
            >
              5:00
            </span>
          </li>
        </ol>
      </section>
      <section
        class="Release-copyright"
      >
        <p>
          ℗© 2017 recordLabel
        </p>
      </section>
    </div>
  </div>
</article>
`;

exports[`[presentation] <Release /> updates \`isImageLoaded\` state when image has loaded 1`] = `
<article
  class="Release"
>
  <header
    class="PageHeader"
  >
    <h1>
      title
    </h1>
  </header>
  <div
    class="MetaBar Release-meta"
  >
    <div
      class="Meta Release-type"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 14.5c-2.49 0-4.5-2.01-4.5-4.5S9.51 7.5 12 7.5s4.5 2.01 4.5 4.5-2.01 4.5-4.5 4.5zm0-5.5c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1z"
        />
      </svg>
       
      <span
        class="Meta-label"
      >
        <span>
          Type
        </span>
        :
      </span>
       
      <span
        class="Meta-value"
      >
        <span>
          Type
        </span>
      </span>
    </div>
    <div
      class="Meta Release-releasedOn"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M9 11H7v2h2v-2zm4 0h-2v2h2v-2zm4 0h-2v2h2v-2zm2-7h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V9h14v11z"
        />
      </svg>
       
      <span
        class="Meta-label"
      >
        <span>
          Released
        </span>
        :
      </span>
       
      <span
        class="Meta-value"
      >
        <time
          class="DateTime"
          datetime="2017-01-01T00:00:00"
          title="January 1, 2017"
        >
          January 1, 2017
        </time>
      </span>
    </div>
    <div
      class="Meta Release-length"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"
        />
      </svg>
       
      <span
        class="Meta-label"
      >
        <span>
          Length
        </span>
        :
      </span>
       
      <span
        class="Meta-value"
      >
        5:00
      </span>
    </div>
    <div
      class="Meta Release-genre"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12 3v10.55c-.59-.34-1.27-.55-2-.55-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4V7h4V3h-6z"
        />
      </svg>
       
      <span
        class="Meta-label"
      >
        <span>
          Genre
        </span>
        :
      </span>
       
      <span
        class="Meta-value"
      >
        genre
      </span>
    </div>
    <div
      class="Meta Release-tracks"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M2 17h2v.5H3v1h1v.5H2v1h3v-4H2v1zm1-9h1V4H2v1h1v3zm-1 3h1.8L2 13.1v.9h3v-1H3.2L5 10.9V10H2v1zm5-6v2h14V5H7zm0 14h14v-2H7v2zm0-6h14v-2H7v2z"
        />
      </svg>
        
      <span
        class="Meta-value"
      >
        1 
        <span>
          track
        </span>
      </span>
    </div>
  </div>
  <div
    class="Release-body"
  >
    <section
      class="Release-images"
    >
      <div
        class="Carousel"
      >
        <div
          class="Carousel-slides"
          style="transform: translate3d(-0%, 0, 0);"
        >
          <figure
            class="Image Release-image isRendered"
          >
            <div
              class="Image-wrapper"
            >
              <img
                alt="images 1 title"
                src="images 1 imageUrl"
              />
            </div>
            <figcaption>
              images 1 title
            </figcaption>
          </figure>
        </div>
      </div>
    </section>
    <div
      class="Release-details"
    >
      <section
        class="Release-description"
      >
        description
      </section>
      <section
        class="Release-tracklist"
      >
        <h2>
          <span>
            Tracklist
          </span>
        </h2>
        <ol>
          <li>
            <span
              class="Release-tracklist-title"
            >
              tracklist 1 title
            </span>
             
            <span
              class="Release-tracklist-genre"
            >
              tracklist 1 genre
            </span>
             
            <span
              class="Release-tracklist-length"
            >
              5:00
            </span>
          </li>
        </ol>
      </section>
      <section
        class="Release-copyright"
      >
        <p>
          ℗© 2017 recordLabel
        </p>
      </section>
    </div>
  </div>
</article>
`;

exports[`[presentation] <Release /> updates \`isImageLoaded\` state when image has previously been loaded 1`] = `
<article
  class="Release"
>
  <header
    class="PageHeader"
  >
    <h1>
      title
    </h1>
  </header>
  <div
    class="MetaBar Release-meta"
  >
    <div
      class="Meta Release-type"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 14.5c-2.49 0-4.5-2.01-4.5-4.5S9.51 7.5 12 7.5s4.5 2.01 4.5 4.5-2.01 4.5-4.5 4.5zm0-5.5c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1z"
        />
      </svg>
       
      <span
        class="Meta-label"
      >
        <span>
          Type
        </span>
        :
      </span>
       
      <span
        class="Meta-value"
      >
        <span>
          Type
        </span>
      </span>
    </div>
    <div
      class="Meta Release-releasedOn"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M9 11H7v2h2v-2zm4 0h-2v2h2v-2zm4 0h-2v2h2v-2zm2-7h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V9h14v11z"
        />
      </svg>
       
      <span
        class="Meta-label"
      >
        <span>
          Released
        </span>
        :
      </span>
       
      <span
        class="Meta-value"
      >
        <time
          class="DateTime"
          datetime="2017-01-01T00:00:00"
          title="January 1, 2017"
        >
          January 1, 2017
        </time>
      </span>
    </div>
    <div
      class="Meta Release-length"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"
        />
      </svg>
       
      <span
        class="Meta-label"
      >
        <span>
          Length
        </span>
        :
      </span>
       
      <span
        class="Meta-value"
      >
        5:00
      </span>
    </div>
    <div
      class="Meta Release-genre"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12 3v10.55c-.59-.34-1.27-.55-2-.55-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4V7h4V3h-6z"
        />
      </svg>
       
      <span
        class="Meta-label"
      >
        <span>
          Genre
        </span>
        :
      </span>
       
      <span
        class="Meta-value"
      >
        genre
      </span>
    </div>
    <div
      class="Meta Release-tracks"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M2 17h2v.5H3v1h1v.5H2v1h3v-4H2v1zm1-9h1V4H2v1h1v3zm-1 3h1.8L2 13.1v.9h3v-1H3.2L5 10.9V10H2v1zm5-6v2h14V5H7zm0 14h14v-2H7v2zm0-6h14v-2H7v2z"
        />
      </svg>
        
      <span
        class="Meta-value"
      >
        1 
        <span>
          track
        </span>
      </span>
    </div>
  </div>
  <div
    class="Release-body"
  >
    <section
      class="Release-images"
    >
      <div
        class="Carousel"
      >
        <div
          class="Carousel-slides"
          style="transform: translate3d(-0%, 0, 0);"
        >
          <figure
            class="Image Release-image isRendered"
          >
            <div
              class="Image-wrapper"
            >
              <img
                alt="images 1 title"
                src="images 1 imageUrl"
              />
            </div>
            <figcaption>
              images 1 title
            </figcaption>
          </figure>
        </div>
      </div>
    </section>
    <div
      class="Release-details"
    >
      <section
        class="Release-description"
      >
        description
      </section>
      <section
        class="Release-tracklist"
      >
        <h2>
          <span>
            Tracklist
          </span>
        </h2>
        <ol>
          <li>
            <span
              class="Release-tracklist-title"
            >
              tracklist 1 title
            </span>
             
            <span
              class="Release-tracklist-genre"
            >
              tracklist 1 genre
            </span>
             
            <span
              class="Release-tracklist-length"
            >
              5:00
            </span>
          </li>
        </ol>
      </section>
      <section
        class="Release-copyright"
      >
        <p>
          ℗© 2017 recordLabel
        </p>
      </section>
    </div>
  </div>
</article>
`;
